plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '8.9.0'
    id 'net.neoforged.moddev' version '2.0.143'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-${minecraft_version}"
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

spotless {
    java {
        target 'src/*/java/**/*.java'
        palantirJavaFormat('2.96.0').formatJavadoc(true)
        removeUnusedImports()
        formatAnnotations()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.withType(AbstractArchiveTask).configureEach {
    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude('**/*.bbmodel')
    exclude('src/generated/**/.cache')
}

def requestedRecipeViewerTasks = gradle.startParameter.taskNames.collect { it.toLowerCase(Locale.ROOT) }
def recipeViewerMode = providers.gradleProperty('delvefold_recipe_viewers')
        .orElse('none')
        .get()
        .toLowerCase(Locale.ROOT)
def includeJeiRuntime = recipeViewerMode in ['jei', 'both'] ||
        requestedRecipeViewerTasks.any { it.contains('clientjei') || it.contains('clientrecipeviewers') }
def includeEmiRuntime = recipeViewerMode in ['emi', 'both'] ||
        requestedRecipeViewerTasks.any { it.contains('clientemi') || it.contains('clientrecipeviewers') }

repositories {
    maven {
        name = 'BlameJared'
        url = 'https://maven.blamejared.com'
        content { includeGroup 'mezz.jei' }
    }
    maven {
        name = 'EMI'
        url = 'https://repo.sleeping.town/'
        content { includeGroup 'dev.emi' }
    }
}

neoForge {
    version = project.neo_version

    parchment {
        minecraftVersion = project.parchment_minecraft_version
        mappingsVersion = project.parchment_mappings_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientJei {
            client()
            gameDirectory = layout.projectDirectory.dir('run/jei')
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientEmi {
            client()
            gameDirectory = layout.projectDirectory.dir('run/emi')
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientRecipeViewers {
            client()
            gameDirectory = layout.projectDirectory.dir('run/recipe-viewers')
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            def isolatedWorld = providers.gradleProperty('delvefold_server_world').orNull
            if (isolatedWorld != null) {
                if (!(isolatedWorld ==~ /[A-Za-z0-9._-]{1,64}/)) {
                    throw new GradleException('delvefold_server_world must be a safe 1-64 character world name')
                }
                programArguments.addAll('--world', isolatedWorld)
            }
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', "${project.mod_id},minecraft"
        }

        data {
            data()
            programArguments.addAll(
                    '--mod', project.mod_id,
                    '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
            )
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.INFO
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    compileOnly "dev.emi:emi-neoforge:${emi_version}:api"
    if (includeJeiRuntime) {
        localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    }
    if (includeEmiRuntime) {
        localRuntime "dev.emi:emi-neoforge:${emi_version}"
    }
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'com.google.code.gson:gson:2.10.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes(
                'Implementation-Title': mod_name,
                'Implementation-Version': mod_version,
                'Implementation-Vendor': mod_authors,
                'Delvefold-Api-Version': mod_api_version
        )
    }
}

def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            jei_version_range      : jei_version_range,
            emi_version_range      : emi_version_range
    ]

    inputs.properties(replaceProperties)
    expand(replaceProperties)
    from('src/main/templates')
    into(layout.buildDirectory.dir('generated/sources/modMetadata'))
}

sourceSets.main.resources.srcDir(generateModMetadata)
neoForge.ideSyncTask(generateModMetadata)

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll('-Xlint:deprecation', '-Xlint:unchecked')
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

def validateJson = tasks.register('validateJson') {
    group = 'verification'
    description = 'Parses every shipped JSON resource, schema, and datapack example.'
    def inputsToValidate = files(
            fileTree('src/main/resources') { include '**/*.json' },
            fileTree('src/generated/resources') { include '**/*.json' },
            fileTree('schemas') { include '**/*.json' },
            fileTree('examples/datapack') { include '**/*.json', '**/*.mcmeta' }
    )
    inputs.files(inputsToValidate)
    doLast {
        def parser = new groovy.json.JsonSlurper()
        inputsToValidate.files.sort().each { candidate ->
            try {
                parser.parse(candidate, 'UTF-8')
            } catch (Exception exception) {
                throw new GradleException("Invalid JSON in ${project.relativePath(candidate)}", exception)
            }
        }
        logger.lifecycle("Validated ${inputsToValidate.files.size()} JSON files")
    }
}

def validateTranslations = tasks.register('validateTranslations') {
    group = 'verification'
    description = 'Checks literal Delvefold translation keys referenced by Java sources.'
    def languageFile = file('src/main/resources/assets/delvefold/lang/en_us.json')
    def javaSources = fileTree('src/main/java') { include '**/*.java' }
    inputs.file(languageFile)
    inputs.files(javaSources)
    doLast {
        Map language = (Map) new groovy.json.JsonSlurper().parse(languageFile, 'UTF-8')
        Set<String> referenced = new TreeSet<>()
        def patterns = [
                ~/Component\.translatable\(\s*"([^"]+)"/,
                ~/lines\.add\(\s*"([^"]*\.delvefold\.[^"]+)"/,
                ~/\bmessage\(\s*"([^"]*\.delvefold\.[^"]+)"/,
                ~/\blocalized\(\s*"([^"]*\.delvefold\.[^"]+)"/,
                ~/\bvalidation\(\s*"([^"]*\.delvefold\.[^"]+)"/,
                ~/AdminLocalizedMessage\.encode\(\s*"([^"]*\.delvefold\.[^"]+)"/
        ]
        javaSources.files.each { source ->
            String text = source.getText('UTF-8')
            patterns.each { pattern ->
                (text =~ pattern).each { match ->
                    String key = match[1]
                    if (key.contains('.delvefold.') && !key.endsWith('.')) {
                        referenced.add(key)
                    }
                }
            }
        }
        Set<String> missing = referenced.findAll { !language.containsKey(it) }
        if (!missing.isEmpty()) {
            throw new GradleException("Missing en_us translations: ${missing.join(', ')}")
        }
        logger.lifecycle("Validated ${referenced.size()} literal Delvefold translation keys")
    }
}

tasks.named('check').configure {
    dependsOn(validateJson, validateTranslations)
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
}
